Add PluginManager base implementation, prepare outsourcing native commands

--- a/ClixRM/ClixRM.csproj
+++ b/ClixRM/ClixRM.csproj
@@ -32,4 +32,9 @@
     <ProjectReference Include="..\ClixRM.Sdk\ClixRM.Sdk.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\Flows\" />
+    <Folder Include="Services\Flows\" />
+  </ItemGroup>
+
 </Project>
